--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextToolbar/TextToolbarPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextToolbar/TextToolbarPage.xaml
@@ -1,30 +1,29 @@
-<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.TextToolbarPage"
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.TextToolbarPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:common="using:Microsoft.Toolkit.Uwp.SampleApp.Common"
       xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:buttons="using:Microsoft.Toolkit.Uwp.UI.Controls.TextToolbarButtons"
       xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.TextToolbar"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
 
     <Page.Resources>
-        <local:IsFormat x:Key="IsFormatMarkdown" Format="MarkDown" />
+        <local:IsFormat x:Key="IsFormatMarkdown"
+                        Format="MarkDown" />
     </Page.Resources>
 
     <Grid x:Name="MainGrid"
-                               RequestedTheme="{Binding Theme.Value, Mode=TwoWay}"
-                               Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+          Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+          RequestedTheme="{Binding Theme.Value, Mode=TwoWay}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <controls:TextToolbar x:Name="Toolbar"
-                                Editor="{x:Bind EditZone}"
-                                IsEnabled="{Binding IsEnabled.Value, Mode=TwoWay}"
-                                Format="{Binding Format.Value, Mode=TwoWay}"
-                                Background="#4C4F4F4F" />
+                              Background="#4C4F4F4F"
+                              Editor="{x:Bind EditZone}"
+                              Format="{Binding Format.Value, Mode=TwoWay}"
+                              IsEnabled="{Binding IsEnabled.Value, Mode=TwoWay}" />
         <ScrollViewer Grid.Row="1">
             <Grid>
                 <Grid.RowDefinitions>
@@ -33,30 +32,31 @@
                 </Grid.RowDefinitions>
 
                 <RichEditBox x:Name="EditZone"
-                                 PlaceholderText="Enter Text Here"
-                                 TextWrapping="Wrap"
-                                 TextChanged="EditZone_TextChanged"
-                                 VerticalContentAlignment="Stretch"
-                                 Background="{x:Null}"
-                                 BorderBrush="{x:Null}"
-                                 MinHeight="300" />
+                             MinHeight="300"
+                             VerticalContentAlignment="Stretch"
+                             Background="{x:Null}"
+                             BorderBrush="{x:Null}"
+                             PlaceholderText="Enter Text Here"
+                             TextChanged="EditZone_TextChanged"
+                             TextWrapping="Wrap" />
 
                 <Grid x:Name="MD"
-                                 Grid.Row="1"
-                                 Padding="10"
-                                 Visibility="{Binding Format.Value, Mode=OneWay, Converter={StaticResource IsFormatMarkdown}}">
+                      Grid.Row="1"
+                      Padding="10"
+                      Visibility="{Binding Format.Value, Mode=OneWay, Converter={StaticResource IsFormatMarkdown}}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <TextBlock Text="MarkDown Preview"
-                                 Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"
-                                 Style="{StaticResource SubtitleTextBlockStyle}" />
+                    <TextBlock Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"
+                               Style="{StaticResource SubtitleTextBlockStyle}"
+                               Text="MarkDown Preview" />
                     <controls:MarkdownTextBlock x:Name="Previewer"
-                                 Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"
-                                 LinkClicked="Previewer_LinkClicked"
-                                 Grid.Row="1"
-                                 Canvas.ZIndex="99" ScrollViewer.IsVerticalRailEnabled="False" />
+                                                Grid.Row="1"
+                                                Canvas.ZIndex="99"
+                                                Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}"
+                                                LinkClicked="Previewer_LinkClicked"
+                                                ScrollViewer.IsVerticalRailEnabled="False" />
                 </Grid>
             </Grid>
         </ScrollViewer>
