--- a/Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/TextToolbar.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/TextToolbar.xaml
@@ -1,7 +1,6 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="using:Microsoft.Toolkit.Uwp.UI.Controls">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/ToolbarItems/ToolbarButton.xaml" />
         <ResourceDictionary Source="ms-appx:///Microsoft.Toolkit.Uwp.UI.Controls/TextToolbar/ToolbarItems/ToolbarSeparator.xaml" />
@@ -13,25 +12,30 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:TextToolbar">
-                    <ScrollViewer
-                        VerticalAlignment="{TemplateBinding VerticalAlignment}"
-                        VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                        HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
-                        HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                        VerticalScrollMode="Disabled"
-                        HorizontalScrollMode="Enabled"
-                        HorizontalScrollBarVisibility="Auto"
-                        VerticalScrollBarVisibility="Disabled"
-                        IsTabStop="False"
-                        Background="{TemplateBinding Background}">
-                        <CommandBar x:Name="Root" Grid.Row="1" Background="{x:Null}" IsTabStop="False"  HorizontalAlignment="Left" Style="{StaticResource SimpleCommandBar}" />
+                    <ScrollViewer HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                                  VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                                  HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                  VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                  Background="{TemplateBinding Background}"
+                                  HorizontalScrollBarVisibility="Auto"
+                                  HorizontalScrollMode="Enabled"
+                                  IsTabStop="False"
+                                  VerticalScrollBarVisibility="Disabled"
+                                  VerticalScrollMode="Disabled">
+                        <CommandBar x:Name="Root"
+                                    Grid.Row="1"
+                                    HorizontalAlignment="Left"
+                                    Background="{x:Null}"
+                                    IsTabStop="False"
+                                    Style="{StaticResource SimpleCommandBar}" />
                     </ScrollViewer>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
-    <Style x:Key="SimpleCommandBar" TargetType="CommandBar">
+    <Style x:Key="SimpleCommandBar"
+           TargetType="CommandBar">
         <Setter Property="Height" Value="48" />
         <Setter Property="Template">
             <Setter.Value>
@@ -44,7 +48,12 @@
                                 </RectangleGeometry.Transform>
                             </RectangleGeometry>
                         </Grid.Clip>
-                        <Grid x:Name="ContentRoot" Background="{TemplateBinding Background}" Height="{TemplateBinding Height}" Margin="{TemplateBinding Padding}" MinHeight="{ThemeResource AppBarThemeCompactHeight}" VerticalAlignment="Top">
+                        <Grid x:Name="ContentRoot"
+                              Height="{TemplateBinding Height}"
+                              MinHeight="{ThemeResource AppBarThemeCompactHeight}"
+                              Margin="{TemplateBinding Padding}"
+                              VerticalAlignment="Top"
+                              Background="{TemplateBinding Background}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
@@ -54,11 +63,26 @@
                             </Grid.RenderTransform>
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition x:Name="ContentControlColumnDefinition" Width="*" />
-                                    <ColumnDefinition x:Name="PrimaryItemsControlColumnDefinition" Width="Auto" />
+                                    <ColumnDefinition x:Name="ContentControlColumnDefinition"
+                                                      Width="*" />
+                                    <ColumnDefinition x:Name="PrimaryItemsControlColumnDefinition"
+                                                      Width="Auto" />
                                 </Grid.ColumnDefinitions>
-                                <ContentControl x:Name="ContentControl" ContentTemplate="{TemplateBinding ContentTemplate}" ContentTransitions="{TemplateBinding ContentTransitions}" Content="{TemplateBinding Content}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" IsTabStop="False" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" />
-                                <ItemsControl x:Name="PrimaryItemsControl" Grid.Column="1" HorizontalAlignment="Right" IsTabStop="False" MinHeight="{ThemeResource AppBarThemeCompactHeight}">
+                                <ContentControl x:Name="ContentControl"
+                                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                Content="{TemplateBinding Content}"
+                                                ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                ContentTransitions="{TemplateBinding ContentTransitions}"
+                                                Foreground="{TemplateBinding Foreground}"
+                                                IsTabStop="False" />
+                                <ItemsControl x:Name="PrimaryItemsControl"
+                                              Grid.Column="1"
+                                              MinHeight="{ThemeResource AppBarThemeCompactHeight}"
+                                              HorizontalAlignment="Right"
+                                              IsTabStop="False">
                                     <ItemsControl.ItemsPanel>
                                         <ItemsPanelTemplate>
                                             <StackPanel Orientation="Horizontal" />
